fix acces pic PhotoController